@@ -3,6 +3,8 @@
 package ordo;
 
 import map.MapReduce;
+
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.rmi.*;
@@ -16,6 +18,7 @@ import formats.Format;
 import formats.KVFormat;
 import formats.LineFormat;
 import formats.Format.OpenMode;
+import hdfs.HdfsClient;
 
 public class Job extends UnicastRemoteObject implements JobInterface, JobInterfaceX, CallBack {
 
@@ -49,16 +52,15 @@ public class Job extends UnicastRemoteObject implements JobInterface, JobInterfa
 
 		if (numberOfMapCallBack == numberOfMaps) {
 			System.out.println("L'ensemble des maps ont été exécuté, appel du read HDFS");
-			try {
-				Process read = Runtime.getRuntime().exec("java hidoop/bin/hdfs/HdfsClient read " + originalFname);
-				read.waitFor();
-			} catch (IOException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			} catch (InterruptedException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
+			/*
+				ProcessBuilder read = new ProcessBuilder();
+				read.command("bash", "-c", "java", "../hdfs/HdfsClient", "read", originalFname);
+				read.redirectError();
+				//read.directory(new File("~/git/HidoopMaster/hidoop/bin/hdfs/"));
+				Process p = read.start();
+				p.waitFor(); */
+				String args[] = {"read", originalFname};
+				HdfsClient.main(args);
 			System.out.println("Read fini, appel du reduce");
 			startReduce();
 		}
